--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,9 @@ find_package(PCL REQUIRED)
 
 include_directories("/usr/local/include/eigen3")
 
-add_executable(binTpcd src/binTpcd.cpp)
-target_link_libraries(binTpcd ${PCL_LIBRARIES})
+# add_executable(binTpcd src/binTpcd.cpp)
+# target_link_libraries(binTpcd ${PCL_LIBRARIES})
+
+add_executable(double_filter src/double_filter.cpp)
+target_link_libraries(double_filter ${PCL_LIBRARIES})
+
